--- a/Packages/com.4growth.gamification-player-app-for-unity/Scripts/Tests/Runtime/com.4growth.gamification-player-app-for-unity.Tests.asmdef
+++ b/Packages/com.4growth.gamification-player-app-for-unity/Scripts/Tests/Runtime/com.4growth.gamification-player-app-for-unity.Tests.asmdef
@@ -7,6 +7,7 @@
         "UnityEngine.TestRunner"
     ],
     "includePlatforms": [
+        "Android",
         "Editor"
     ],
     "excludePlatforms": [],
