--- a/Packages/com.4growth.gamification-player-app-for-unity/package.json
+++ b/Packages/com.4growth.gamification-player-app-for-unity/package.json
@@ -8,5 +8,8 @@
     "name": "Frank den Uijl",
     "email": "frank.den.uijl@4growth.com",
     "url": "https://4growth.com/"
+  },
+  "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "2.0.0"
   }
 }
