Add RAG for AI Chat

--- a/Packages/com.4growth.gamification-player-app-for-unity/Scripts/Runtime/com.4growth.gamification-player-app-for-unity.asmdef
+++ b/Packages/com.4growth.gamification-player-app-for-unity/Scripts/Runtime/com.4growth.gamification-player-app-for-unity.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "com.4growth.gamification-player-app-for-unity",
     "rootNamespace": "GamificationPlayer",
-    "references": [],
+    "references": [
+        "GUID:63a57c8b658089e49a173b0f0c4870a7"
+    ],
     "includePlatforms": [
         "Android",
         "Editor",
